config/simple-app-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: simple-app
  namespace: simple-app
spec:
  parentRefs:
    - name: main-gateway
      namespace: nginx-gateway
  hostnames:
    - app.localhost
  rules:
    - backendRefs:
        - name: simple-app
          port: 80
